--- a/H1EmuLauncher/Windows/Launcher.xaml
+++ b/H1EmuLauncher/Windows/Launcher.xaml
@@ -545,8 +545,12 @@
                         </FlowDocument>
                     </RichTextBox>
 
-                    <!-- Patch notes textbox -->
-                    <RichTextBox x:Name="patchNotesBox"
+                    <!-- To allow scrolling on touch device -->
+                    <ScrollViewer PanningMode="Both"
+                                  VerticalScrollBarVisibility="Hidden">
+                        
+                        <!-- Patch notes textbox -->
+                        <RichTextBox x:Name="patchNotesBox"
                                  Height="96"
                                  Margin="0,10,0,0"
                                  Background="Transparent"
@@ -554,6 +558,8 @@
                                  BorderThickness="0"
                                  IsReadOnly="True"
                                  Cursor="Arrow"/>
+                        
+                    </ScrollViewer>
 
                     <!-- Read full details of update hyperlink -->
                     <TextBlock Margin="6,22,0,0">
