--- a/H1EmuLauncher/Windows/Launcher.xaml
+++ b/H1EmuLauncher/Windows/Launcher.xaml
@@ -622,7 +622,7 @@
 
                         <!-- Steam frame -->
                         <DockPanel Margin="20,0,30,0">
-                            <Frame x:Name="SteamFramePanel"
+                            <Frame x:Name="steamFramePanel"
                                    VerticalAlignment="Top"
                                    Source="..\\SteamFrame\Login.xaml"
                                    NavigationUIVisibility="Hidden"
