--- a/H1EmuLauncher/Windows/AddServer.xaml
+++ b/H1EmuLauncher/Windows/AddServer.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         UseLayoutRounding="True"
-        Title="Launcher"
+        Title="H1Emu Add Server"
         x:Name="AddServerMenu"
         Width="420"
         Height="300"
-        WindowStartupLocation="CenterScreen"
+        WindowStartupLocation="CenterOwner"
         Background="#FF2A2A32"
         FontFamily="Bahnschrift Light"
         FontSize="16"
