--- a/H1EmuLauncher/Windows/Splash.xaml
+++ b/H1EmuLauncher/Windows/Splash.xaml
@@ -4,10 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Splash"
+        Title="H1Emu Splash Screen"
         x:Name="SplashScreen"
-        MinHeight="100" MinWidth="400"
-        MaxHeight="100" MaxWidth="800"
+        MinHeight="100"
+        MaxHeight="100"
+        MinWidth="400"
+        MaxWidth="800"
         SizeToContent="WidthAndHeight"
         Background="#1C1B22"
         WindowStartupLocation="CenterScreen"
