--- a/H1EmuLauncher/SteamFrame/DownloadComplete.xaml
+++ b/H1EmuLauncher/SteamFrame/DownloadComplete.xaml
@@ -7,7 +7,7 @@
       d:DesignWidth="565"
       d:DesignHeight="140"
       FontFamily="Bahnschrift Light"
-      Title="DoenloadComplete">
+      Title="Download Complete">
 
     <Grid>
         <Grid.RowDefinitions>
