--- a/H1EmuLauncher/SteamFrame/GameInfo.xaml
+++ b/H1EmuLauncher/SteamFrame/GameInfo.xaml
@@ -7,7 +7,7 @@
       d:DesignWidth="565"
       d:DesignHeight="140"
       FontFamily="Bahnschrift Light"
-      Title="GameInfo">
+      Title="Version Selection">
     
     <Grid>
         <Grid.RowDefinitions>
