--- a/H1EmuLauncher/SteamFrame/Login.xaml
+++ b/H1EmuLauncher/SteamFrame/Login.xaml
@@ -9,7 +9,7 @@
       d:DesignHeight="140"
       FontFamily="Bahnschrift Light"
       UseLayoutRounding="True"
-      Title="Login">
+      Title="Steam Login">
     
     <!-- Main Grid -->
     <Grid>
