--- a/H1EmuLauncher/Language/StringResources.de-DE.xaml
+++ b/H1EmuLauncher/Language/StringResources.de-DE.xaml
@@ -57,7 +57,7 @@
     <system:String x:Key="item55">App Zweig verwenden: {0}</system:String>
     <system:String x:Key="item56">Verarbeitungsdepot {0} - {1}</system:String>
     <system:String x:Key="item57">Vorabzuweisung von Speicherplatz...</system:String>
-    <system:String x:Key="item58">Spielversion wird von H1Emu nicht unterstützt.\n\nBitte denken Sie daran, die Spielversion entweder vom 15. Januar 2015 oder vom 22. Dezember 2016 zu verwenden.</system:String>
+    <system:String x:Key="item58">Die Spielversion wird von H1Emu nicht unterstützt.\n\nBitte denken Sie daran, die Spielversion entweder vom 15. Januar 2015 oder vom 22. Dezember 2016 zu verwenden.\n\nSie können den Launcher verwenden, um eine dieser Versionen mit dem Steam-Login auf der Hauptseite herunterzuladen.</system:String>
     <system:String x:Key="item59">Benutzername</system:String>
     <system:String x:Key="item60">Passwort</system:String>
     <system:String x:Key="item61">Alle Details zum Update anzeigen...</system:String>
@@ -162,4 +162,6 @@
     <system:String x:Key="item168">Der Server konnte nicht gestartet werden, versuchen Sie es erneut und wenn das Problem weiterhin besteht, melden Sie es bitte.\n\nEine Neuinstallation von Serverdateien kann dieses Problem beheben.</system:String>
     <system:String x:Key="item169">• Launcher von @Eavilaswayce •</system:String>
     <system:String x:Key="item170">Finanzielle Beitragszahler</system:String>
+    <system:String x:Key="item171">Spielversion vom 22. Dezember 2016, diese ist aktueller und wird vom Projekt unterstützt.</system:String>
+    <system:String x:Key="item172">Spielversion vom 15. Januar 2015, diese erhält nicht so viele Updates wie 2016 und ihr fehlen möglicherweise Funktionen.</system:String>
 </ResourceDictionary>
