--- a/H1EmuLauncher/Language/StringResources.pt-PT.xaml
+++ b/H1EmuLauncher/Language/StringResources.pt-PT.xaml
@@ -57,7 +57,7 @@
     <system:String x:Key="item55">Utilizar o branch da app: {0}</system:String>
     <system:String x:Key="item56">Depósito de processamento {0} - {1}</system:String>
     <system:String x:Key="item57">Pré-alocação de espaço...</system:String>
-    <system:String x:Key="item58">Versão do jogo não suportada pelo H1Emu.\n\nLembre-se de usar a versão do jogo em 15 de Janeiro de 2015 ou 22 de Dezembro de 2016.</system:String>
+    <system:String x:Key="item58">Versão do jogo não suportada pelo H1Emu.\n\nLembre-se de usar a versão do jogo em 15 de janeiro de 2015 ou 22 de dezembro de 2016.\n\nVocê pode usar o inicializador para baixar qualquer uma dessas versões com o login do Steam na página principal.</system:String>
     <system:String x:Key="item59">Nome de utilizador</system:String>
     <system:String x:Key="item60">Senha</system:String>
     <system:String x:Key="item61">Ver detalhes da atualização...</system:String>
@@ -162,4 +162,6 @@
     <system:String x:Key="item168">O servidor falhou ao iniciar, tente novamente e, se o problema persistir, informe-o.\n\nA reinstalação dos arquivos do servidor pode corrigir esse problema.</system:String>
     <system:String x:Key="item169">• Lançador feito por @Eavilaswayce •</system:String>
     <system:String x:Key="item170">Contribuintes Financeiros</system:String>
+    <system:String x:Key="item171">Versão do jogo de 22 de dezembro de 2016, mais atualizada e apoiada pelo projeto.</system:String>
+    <system:String x:Key="item172">Versão de 15 de janeiro de 2015 do jogo, esta não recebe tantas atualizações quanto 2016 e pode não ter recursos.</system:String>
 </ResourceDictionary>
