--- a/H1EmuLauncher/Language/StringResources.tr-TR.xaml
+++ b/H1EmuLauncher/Language/StringResources.tr-TR.xaml
@@ -57,7 +57,7 @@
     <system:String x:Key="item55">Uygulama dalı kullanılıyor: {0}</system:String>
     <system:String x:Key="item56">Depo işleniyor {0} - {1}</system:String>
     <system:String x:Key="item57">Disk alanı tanımlanıyor...</system:String>
-    <system:String x:Key="item58">H1Emu bu oyun versiyonunu desteklemiyor.\n\nLütfen 15 Ocak 2015 veya 22 Aralık 2016 oyun sürümünü kullanmayı unutmayın.</system:String>
+    <system:String x:Key="item58">Oyun sürümü H1Emu tarafından desteklenmiyor.\n\nLütfen 15 Ocak 2015 veya 22 Aralık 2016 oyun sürümünü kullanmayı unutmayın.\n\nBu sürümlerden herhangi birini ana sayfada Steam oturum açma ile indirmek için başlatıcıyı kullanabilirsiniz.</system:String>
     <system:String x:Key="item59">Kullanıcı adı</system:String>
     <system:String x:Key="item60">Şifre</system:String>
     <system:String x:Key="item61">Güncellemenin tüm detaylarını göster...</system:String>
@@ -162,4 +162,6 @@
     <system:String x:Key="item168">Sunucu başlatılamadı, tekrar deneyin ve sorun devam ederse lütfen bildirin.\n\nSunucu dosyalarını yeniden yüklemek bu sorunu çözebilir.</system:String>
     <system:String x:Key="item169">• Başlatıcı @Eavilaswayce tarafından yapılmıştır •</system:String>
     <system:String x:Key="item170">Finansal Katkıda Bulunanlar</system:String>
+    <system:String x:Key="item171">Oyunun 22 Aralık 2016 sürümü, bu daha güncel ve proje tarafından destekleniyor.</system:String>
+    <system:String x:Key="item172">Oyunun 15 Ocak 2015 sürümü, bu 2016 kadar çok güncelleme almıyor ve özelliklerden yoksun olabilir.</system:String>
 </ResourceDictionary>
