--- a/H1EmuLauncher/SteamFrame/GameInfo.xaml
+++ b/H1EmuLauncher/SteamFrame/GameInfo.xaml
@@ -12,8 +12,13 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="1.5*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
         
         <!-- Choose version message -->
         <RichTextBox
@@ -36,44 +41,61 @@
             </FlowDocument>
         </RichTextBox>
 
+        <!-- 2016 Button -->
+        <Button Click="Button2016"
+                Width="270"
+                Height="45"
+                VerticalAlignment="Top"
+                HorizontalAlignment="Left"
+                Foreground="White"
+                FontFamily="Arial Black"
+                FontSize="24"
+                BorderThickness="0"
+                Content="{DynamicResource item32}"
+                Style="{DynamicResource StandardButton}">
+
+            <Button.Background>
+                <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
+            </Button.Background>
+        </Button>
+        
+        <!-- 2016 Button Description -->
+        <TextBlock Grid.Column="1"
+                   Margin="5,0,0,0"
+                   FontSize="16"
+                   Foreground="White"
+                   TextWrapping="Wrap"
+                   IsEnabled="False"
+                   Text="{DynamicResource item171}"/>
+
         <!-- 2015 Button -->
-        <Button
-            Grid.Row="1"
-            Click="Button2015"
-            Width="270"
-            Height="45"
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left"
-            Foreground="White"
-            FontFamily="Arial Black"
-            FontSize="24"
-            BorderThickness="0"
-            Content="{DynamicResource item31}"
-            Style="{DynamicResource StandardButton}">
-            
+        <Button Grid.Row="1"
+                Click="Button2015"
+                Width="270"
+                Height="45"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Left"
+                Foreground="White"
+                FontFamily="Arial Black"
+                FontSize="24"
+                BorderThickness="0"
+                Content="{DynamicResource item31}"
+                Style="{DynamicResource StandardButton}">
+
             <Button.Background>
                 <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
             </Button.Background>
         </Button>
 
-        <!-- 2016 Button -->
-        <Button
-            Grid.Row="1"
-            Click="Button2016"
-            Width="270"
-            Height="45"
-            VerticalAlignment="Top"
-            HorizontalAlignment="Right"
-            Foreground="White"
-            FontFamily="Arial Black"
-            FontSize="24"
-            BorderThickness="0"
-            Content="{DynamicResource item32}"
-            Style="{DynamicResource StandardButton}">
-            
-            <Button.Background>
-                <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
-            </Button.Background>
-        </Button>
+        <!-- 2015 Button Description -->
+        <TextBlock Grid.Column="1"
+                   Grid.Row="1"
+                   Margin="5,0,0,0"
+                   VerticalAlignment="Center"
+                   FontSize="16"
+                   Foreground="White"
+                   TextWrapping="Wrap"
+                   IsEnabled="False"
+                   Text="{DynamicResource item172}"/>
     </Grid>
 </Page>
